second fix for the dark mode for pagination in the balances history

--- a/styles/components/pagination.scss
+++ b/styles/components/pagination.scss
@@ -20,6 +20,10 @@
   }
 }
 
+.MuiSvgIcon-root {
+  color: var(--text-main);
+}
+
 .MuiToolbar-root {
  min-height: unset !important;
 }
